--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -219,7 +219,7 @@ on property:init.svc.zygote=restarting
     stop ppd
 
 service wcnss-service /system/vendor/bin/wcnss_service
-    class main
+    class late_start
     user system
     group system wifi radio
     oneshot
