msm8953-common: Revert back to old FM init prop
* FM app sets system properties now

Change-Id: If38931bc47708e073331009f78f0dd2b1e4a1fff

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -119,6 +119,13 @@ on property:persist.usb.chgdisabled=1
 on property:persist.usb.chgdisabled=0
     write /sys/class/power_supply/battery/charging_enabled 1
 
+# FM
+on property:hw.fm.init=0
+    write /sys/module/radio_iris_transport/parameters/fmsmd_set 0
+
+on property:hw.fm.init=1
+    write /sys/module/radio_iris_transport/parameters/fmsmd_set 1
+
 service vendor.qseecomd /vendor/bin/qseecomd
    class core
    user root
