--- a/rootdir/etc/init.mmi.chipset.rc
+++ b/rootdir/etc/init.mmi.chipset.rc
@@ -16,6 +16,12 @@ on boot
     chown system oem_5004 /sys/devices/soc/soc:fpc_fpc1020/irq
     chown system oem_5004 /sys/devices/soc/soc:fpc_fpc1020/irq_cnt
     chmod 0440 /sys/devices/soc/soc:fpc_fpc1020/irq_cnt
+    chown system oem_5004 /sys/bus/spi/devices/spi8.0/nav
+    chown system oem_5004 /sys/bus/spi/devices/spi8.0/clk_enable
+    chown system oem_5004 /sys/bus/spi/devices/spi8.0/dev_enable
+    chown system oem_5004 /sys/bus/spi/devices/spi8.0/irq
+    chown system oem_5004 /sys/bus/spi/devices/spi8.0/irq_cnt
+    chmod 0440 /sys/bus/spi/devices/spi8.0/irq_cnt
 
 on post-fs-data
     #setup folder for WLAN WAPI
