msm8953-common: Add DTV Support
- Add hidl to manifest
- Fix Sepolicy
- Add proper permissions for /dev/isdbt

--- a/rootdir/root/ueventd.qcom.rc
+++ b/rootdir/root/ueventd.qcom.rc
@@ -403,3 +403,6 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/class/kgsl/kgsl-3d0    force_bus_on             0664    root  system
 /sys/class/kgsl/kgsl-3d0    force_clk_on             0664    root  system
 /sys/class/kgsl/kgsl-3d0    bus_split                0664    root  system
+
+#DTV
+/dev/isdbt                 0660 oem_5019  oem_5019
