--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -61,7 +61,7 @@ on property:ro.vendor.hw.dualsim=false
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
-    mount_all /vendor/etc/fstab.qcom
+    mount_all /vendor/etc/fstab.qcom --early
     write /proc/sys/vm/swappiness 100
     chown root system /mnt/vendor/persist
     chmod 0771 /mnt/vendor/persist
@@ -76,6 +76,23 @@ on fs
 
     #wait /dev/block/bootdevice/by-name/oem
     #mount ext4 /dev/block/bootdevice/by-name/oem /oem ro nosuid nodev barrier=1
+
+on late-fs
+    # Start services for bootanim
+    start servicemanager
+    start surfaceflinger
+    start bootanim
+
+    start vendor.configstore-hal
+    start vendor.gralloc-2-0
+
+    # Wait for hwservicemanager ready since fsck might be triggered in mount_all --late
+    # In such case, init won't responce the property_set from hwservicemanager and then
+    # cause services for bootanim not running.
+    wait_for_prop hwservicemanager.ready true
+
+    # mount RW partitions which need run fsck
+    mount_all /vendor/etc/fstab.qcom --late
 
 on post-fs
     # set RLIMIT_MEMLOCK to 64MB
